--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mongoose": "^5.13.1"
+    "mongoose": "^5.13.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
